@@ -1,2 +1,6 @@
+[B]v1.0.3[/B]
+Bug fixes:
+ - Fix for building scraper cache dirs.
+
 [B]v1.0.1[/B]
  - Initial release of the new AKL fork
